[gd_scene load_steps=4 format=3 uid="uid://bi7ytpauj6vwf"]

[ext_resource type="PackedScene" uid="uid://c37b7ydq2nrlk" path="res://systems/inventory/inventory.tscn" id="1_i0jss"]
[ext_resource type="Script" uid="uid://dmalctu6woj6s" path="res://tests/test_inventory.gd" id="1_wp8uh"]
[ext_resource type="PackedScene" uid="uid://diagt3m0ao5nj" path="res://ui/game/inventory_ui.tscn" id="2_wp8uh"]

[node name="TestInventory" type="Node"]
script = ExtResource("1_wp8uh")

[node name="Inventory" parent="." instance=ExtResource("1_i0jss")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryUI" parent="CanvasLayer" node_paths=PackedStringArray("inventory") instance=ExtResource("2_wp8uh")]
inventory = NodePath("../../Inventory")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 613.0
offset_top = 64.0
offset_right = -65.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="BtnRemStick" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "REMOVE STICK"

[node name="BtnAddStick" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ADD STICK"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="BtnRemStone" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "REMOVE STONE"

[node name="BtnAddStone" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ADD STONE"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="BtnRemBark" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "REMOVE BARK"

[node name="BtnAddBark" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ADD BARK"

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="BtnRemVine" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "REMOVE VINE"

[node name="BtnAddVine" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ADD VINE"

[node name="HBoxContainer5" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="BtnRemBerry" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "REMOVE BERRY"

[node name="BtnAddBerry" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ADD BERRY"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/BtnRemStick" to="." method="_on_btn_rem_stick_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/BtnAddStick" to="." method="_on_btn_add_stick_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/BtnRemStone" to="." method="_on_btn_rem_stone_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/BtnAddStone" to="." method="_on_btn_add_stone_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer3/BtnRemBark" to="." method="_on_btn_rem_bark_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer3/BtnAddBark" to="." method="_on_btn_add_bark_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer4/BtnRemVine" to="." method="_on_btn_rem_vine_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer4/BtnAddVine" to="." method="_on_btn_add_vine_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer5/BtnRemBerry" to="." method="_on_btn_rem_berry_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer5/BtnAddBerry" to="." method="_on_btn_add_berry_pressed"]
